// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnippetPreviewSection RTL renders the snippet editor inside of it 1`] = `
<SnippetPreviewSection
  hasPaperStyle={true}
  icon="eye"
  theme={
    Object {
      "isRtl": true,
    }
  }
  title="Snippet editor"
>
  <.SnippetPreviewSection__Section-bYQhwr
    hasPaperStyle={true}
    headingIcon="eye"
    headingIconColor="#555"
    headingLevel={3}
    headingText="Snippet editor"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "SnippetPreviewSection__Section-bYQhwr",
            "isStatic": false,
            "lastClassName": "cDWOXp",
            "rules": Array [
              "max-width:640px;&",
              ".StyledSection__StyledSectionBase-bjEsGU",
              "{padding-left:0;padding-right:0;& ",
              ".StyledSection__StyledHeading-AtINZ",
              "{",
              [Function],
              ":20px;margin-left:",
              [Function],
              ";}}",
            ],
          },
          "displayName": "SnippetPreviewSection__Section",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "SnippetPreviewSection__Section-bYQhwr",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
      hasPaperStyle={true}
      headingIcon="eye"
      headingIconColor="#555"
      headingLevel={3}
      headingText="Snippet editor"
    >
      <StyledSection
        className="SnippetPreviewSection__Section-bYQhwr cDWOXp"
        hasPaperStyle={true}
        headingIcon="eye"
        headingIconColor="#555"
        headingLevel={3}
        headingText="Snippet editor"
      >
        <span>
          yoast-components StyledSection
        </span>
      </StyledSection>
    </StyledComponent>
  </.SnippetPreviewSection__Section-bYQhwr>
</SnippetPreviewSection>
`;

exports[`SnippetPreviewSection renders the snippet editor inside of it 1`] = `
<SnippetPreviewSection
  hasPaperStyle={true}
  icon="eye"
  theme={
    Object {
      "isRtl": false,
    }
  }
  title="Snippet editor"
>
  <.SnippetPreviewSection__Section-bYQhwr
    hasPaperStyle={true}
    headingIcon="eye"
    headingIconColor="#555"
    headingLevel={3}
    headingText="Snippet editor"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "SnippetPreviewSection__Section-bYQhwr",
            "isStatic": false,
            "lastClassName": "cDWOXp",
            "rules": Array [
              "max-width:640px;&",
              ".StyledSection__StyledSectionBase-bjEsGU",
              "{padding-left:0;padding-right:0;& ",
              ".StyledSection__StyledHeading-AtINZ",
              "{",
              [Function],
              ":20px;margin-left:",
              [Function],
              ";}}",
            ],
          },
          "displayName": "SnippetPreviewSection__Section",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "SnippetPreviewSection__Section-bYQhwr",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
      hasPaperStyle={true}
      headingIcon="eye"
      headingIconColor="#555"
      headingLevel={3}
      headingText="Snippet editor"
    >
      <StyledSection
        className="SnippetPreviewSection__Section-bYQhwr cDWOXp"
        hasPaperStyle={true}
        headingIcon="eye"
        headingIconColor="#555"
        headingLevel={3}
        headingText="Snippet editor"
      >
        <span>
          yoast-components StyledSection
        </span>
      </StyledSection>
    </StyledComponent>
  </.SnippetPreviewSection__Section-bYQhwr>
</SnippetPreviewSection>
`;
